<resources>
    <string name="app_name">Book My Hotel</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Logowanie</string>

    <string name="server_ip_address">192.168.0.103</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Logowanie</string>
    <string name="error_invalid_email">This email address is invalid </string>
    <string name="error_invalid_password">This password is too short </string>
    <string name="error_incorrect_password">This password is incorrect </string>
    <string name="error_authentication_failed">Login Authentication failed </string>
    <string name="error_login_other">Unexpected login error occurs</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_register_in">Zrejestruj</string>
    <string name="filter_view_chose_city">Wybierz miasto</string>
    <string name="Szukaj_Pokoi">Szukaj pokoi</string>
    <string name="miasto">Miasto</string>
    <string name="data_przyjazdu">Zameldowanie</string>
    <string name="data_wyjazdu">Wymeldowanie</string>
    <string name="loading">Loading...</string>
    <string name="DATA_FORMAT">yyyy-MM-dd</string>
    <string name="Kryteria">Kryteria</string>
    <string name="Ilosc_miejsc">Osoby</string>
    <string name="Szukaj">Szukaj</string>
    <string name="title_activity_hotel_list">Lista Hoteli</string>
    <string name="title_activity_hotel_detail">Szczegóły pokoju</string>
    <string name="title_activity_reservation">Twoje Rezerwacje</string>


    <string name="action_settings">Settings</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="hotel_description">Opis Hotelu</string>
    <string name="default_text">Default text</string>
    <string name="food_offer_title">Posiłki</string>
    <string name="hotel_facilities_title">Udogodnienia</string>
    <string name="reservation_button">Zarezerwuj ten pokój</string>
    <string name="reservation">Rezerwacja</string>
    <string name="title_dialog_reservation">Rezerwacja</string>
    <string name="content_dialog_reservation">Czy napewno chcesz zarezerwować ten pokój?</string>
    <string name="longer_positive">TAK</string>
    <string name="negative">Nie</string>
    <string name="error">Błąd</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Prosze czekać</string>
    <string name="process_request">Realizujemy twoje żądanie</string>
    <string name="your_resercation">Twoja Rezerwacja</string>
    <string name="reservation_success">Pokój został zarezerwowany</string>
    <string name="nie_masz_adnych_rezerwacji">Nie masz żadnych rezerwacji</string>
    <string name="status">STATUS</string>
    <string name="no_offer">Brak</string>
    <string name="string_register">Rejestracja</string>
    <string name="user_name">Nazwa użykownika</string>
    <string name="user_pswd">Hasło</string>
    <string name="New_acc">Nowe konto</string>
    <string name="registartion_succ">Rejestracja zakonczona powodzeniem</string>

    <string-array name="numerOfPeople">
        <item>1 Osoba</item>
        <item>2 Osoby</item>
        <item>3 Osoby</item>
        <item>4 Osoby</item>
        <item>5 Osób</item>
    </string-array>
</resources>
