<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/view_spacing_small"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        style="@style/CardStyle.Home"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        >

        <LinearLayout
            style="@style/SelectableItemStyle.Rect"
            android:id="@+id/arrival_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_przyjazdu"
                android:textAppearance="@style/TextStyle.Title"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/md_green_100" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/filter_arrival_date"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_spacing_small"
                android:text="@string/loading"
                android:layout_gravity="center"
                android:textAppearance="@style/TextStyle.Body2"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardStyle.Home"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        >
        <LinearLayout
            style="@style/SelectableItemStyle.Rect"
            android:id="@+id/departure_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_wyjazdu"
                android:textAppearance="@style/TextStyle.Title"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/md_green_100" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/filter_departure_date"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_spacing_small"
                android:text="@string/loading"
                android:layout_gravity="center"
                android:textAppearance="@style/TextStyle.Body2"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>